Update Social Media

--- a/about.html
+++ b/about.html
@@ -76,10 +76,18 @@
 
     <footer>
       <div class="socials">
-        <i class="bx bxl-facebook-square"></i>
-        <i class="bx bxl-instagram"></i>
-        <i class="bx bxl-twitter"></i>
-        <i class="bx bxl-linkedin-square"></i>
+        <a href="https://www.facebook.com/advancenine">
+          <i class="bx bxl-facebook-square"></i>
+        </a>
+        <a href="https://twitter.com/advancenine">
+          <i class="bx bxl-instagram"></i>
+        </a>
+        <a href="https://twitter.com/advancenine">
+          <i class="bx bxl-twitter"></i>
+        </a>
+        <a href="https://discord.com/invite/eaGcV6rfKQ">
+          <i class="bx bxl-discord-alt"></i>
+        </a>
       </div>
       <p>Copyright ©2024, All rights reserved.</p>
     </footer>
